--- a/src/main/resources/messages_et.properties
+++ b/src/main/resources/messages_et.properties
@@ -30,11 +30,12 @@ CREATE_OR_ADD_REPORT=Loo või vaata raportit
 DOWNLOAD=Lae alla
 # Examination page
 INSERT_EXAMINATION=Sisesta ülevaatus
-SAMPLE_CODE_AND_TIME=Vereproovi kood
+SAMPLE_CODE_AND_TIME=Vereproovi kood ja võtmise aeg
 ORIGIN=Etniline päritolu
 BMI_BEFORE_PREGNANCY=Kehamassiindeks enne rasedust
 PREGNANCY_LENGTH_AT_TEST=Raseduse nädal vereproovi võtmisel
-FETUS_COUNT=Loodete arv 1
+FETUS_COUNT_ONE=Loodete arv 1
+FETUS_COUNT=Loodete arv
 KNOWN_TUMOR=Teadaolev pahaloomuline kasvaja
 HSCT=Luuüdi transplantatsioon
 HAD_IVF=IVF rasedusel kasutatud doonormunarakku
