Minor changes in language files

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -36,6 +36,7 @@ ORIGIN=Origin
 BMI_BEFORE_PREGNANCY=Body mass index before pregnancy
 PREGNANCY_LENGTH_AT_TEST=Pregnancy length at the time of sampling
 FETUS_COUNT_ONE=Fetus count 1
+FETUS_COUNT=Fetus count
 KNOWN_TUMOR=Known tumor
 HSCT=HSCT
 HAD_IVF=Has had IVF
