--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -35,6 +35,7 @@ ORIGIN=Этническое происхождение
 BMI_BEFORE_PREGNANCY=Индекс массы тела до беременности
 PREGNANCY_LENGTH_AT_TEST=Срок беременности при заборе крови
 FETUS_COUNT_ONE=Плод 1
+FETUS_COUNT=Плод
 KNOWN_TUMOR=Известная злокачественная опухоль (?)
 HSCT=Пересадка костного мозга
 HAD_IVF=При IVF беременности использована донорская яйцеклетка
