Minor changes in language files

--- a/src/main/resources/messages_et.properties
+++ b/src/main/resources/messages_et.properties
@@ -27,7 +27,7 @@ EVALUATE_PATIENT=Hinda
 SHOW_REPORT=Näita raportit
 QUERY_EXAMINATIONS=Päri andmed
 CREATE_OR_ADD_REPORT=Loo või vaata raportit
-DOWNLOAD=Lae alla
+DOWNLOAD=Laadi alla
 # Examination page
 INSERT_EXAMINATION=Sisesta ülevaatus
 SAMPLE_CODE_AND_TIME=Vereproovi kood ja võtmise aeg
