Minor changes in language files

--- a/src/main/resources/messages_et.properties
+++ b/src/main/resources/messages_et.properties
@@ -69,7 +69,7 @@ ASSESSMENT=Hinnang
 DECISION=Otsus
 NORMAL=Normaalne
 ABNORMAL=Ebanormaalne
-CONFIRM_AND_SEND_TO=Kinnita ja saada raport
+CONFIRM_AND_SEND_TO=Kinnita ja teavita tulemustest
 PATIENT_DATE_BIRTH=Patsiendi sünniaeg
 PREGNANCY_LENGTH=Raseduse kestus
 SNP=SNP
